# marky

./: CHANGELOG.md  README.md  package.json
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: release.yml
docs/: launch-copy.md
docs/plans/: 2026-05-11-pluggable-renderers-roadmap.md
scripts/: install-cli.sh
src/: App.css  App.tsx  Editor.tsx  mermaidPlugin.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
